fix spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -77,7 +77,7 @@ h5 {
   margin: 0px 10px 0px 10px;
   display: inline;
   cursor: pointer;
-  min-width: 95px;
+  min-width: 100px;
 }
 
 .pic {
